[package]
name = "rualdi"
version = "0.1.6"
authors = ["Jarsop <jarsop@outlook.com>"]
description = "Rust Aliasing Directory"
license = "AGPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/jarsop/rualdi"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "shell", "utility", "bash", "zsh"]
readme = "README.md"

[dependencies]
rualdlib = { version = "0.1.1", path = "rualdlib" }
structopt = "0.3.17"
anyhow = "1.0.32"
dirs-next = "2.0.0"

[dev-dependencies]
tempfile = "3.1.0"
toml = "0.5.6"
serial_test = "0.5.0"
gag = "0.1.10"

[package.metadata.deb]
maintainer = "Jarsop <jarsop@outlook.com>"
copyright = "2020, Jarsop <jarsop@outlook.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A tool to aliasing directories written safely in Rust."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/rualdi", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rualdi/README", "644"],
]

[package.metadata.rpm]
package = "rualdi"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
rualdi = { path = "/usr/bin/rualdi" }
