[package]
name = "rualdlib"
version = "0.1.1"
authors = ["Jarsop <jarsop@outlook.com>"]
description = "Rust Aliasing Directory"
license = "AGPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/jarsop/rualdi"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "shell", "utility", "bash", "zsh"]

[dependencies]
serde = "1.0.116"
serde_derive = "1.0.116"
shellexpand = "2.0.0"
toml = "0.5.6"
anyhow = "1.0.32"
colored = "2.0.0"
term_size = "0.3.2"
regex = "1.5.4"

[dev-dependencies]
tempfile = "3.1.0"
