[package]
name = "rualdlib"
version = "0.1.3"
authors = ["Lucas Burns <lmb@lmburns.com>", "Jarsop <jarsop@outlook.com>"]
description = "Rust Aliasing Directory (fork)"
license = "AGPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/lmburns/rualdi"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "shell", "utility", "bash", "zsh", "fzf"]

[dependencies]
serde = "1.0.116"
serde_derive = "1.0.116"
shellexpand = "2.0.0"
toml = "0.5.6"
anyhow = "1.0.32"
colored = "2.0.0"
regex = "1.5.4"
dirs = "3.0.2"
indexmap = "1.7.0"
terminal_size = "0.1.17"

[dev-dependencies]
tempfile = "3.1.0"
