[package]
name = "rualdlib"
version = "0.1.5"
authors = ["Jean-Pierre Geslin <jarsop@outlook.com>", "Lucas Burns <lmb@lmburns.com>", ]
description = "Rust Aliasing Directory"
license = "AGPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/Jarsop/rualdi"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "utility", "bash", "zsh", "fzf"]

[features]
dumb_terminal = ["colored/no-color"]

[dependencies]
serde = "1.0.116"
serde_derive = "1.0.116"
shellexpand = "2.1.0"
toml = "0.5.6"
anyhow = "1.0.32"
colored = "2.0.0"
regex = "1.5.4"
dirs = "3.0.2"
indexmap = "1.7.0"
terminal_size = "0.1.17"

[dev-dependencies]
tempfile = "3.1.0"
rualdlib = { path = ".", features = ["dumb_terminal"] }
